--- a/kube/prod-deploy.yml
+++ b/kube/prod-deploy.yml
@@ -1,8 +1,8 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: little-help-book
-  namespace: little-help-book
+  name: prod-little-help-book-deployment
+  namespace: prod-little-help-book
   labels:
     app: little-help-book
 spec:
@@ -16,7 +16,7 @@ spec:
         app: little-help-book
     spec:
       containers:
-      - name: little-help-book
+      - name: web-server
         image: codegold79/little-help-book:0.1.0
         resources:
            limits:
@@ -26,7 +26,7 @@ spec:
               cpu: 0.25
               memory: 250Mi
         ports:
-        - containerPort: 80
+        - containerPort: 5000
   strategy:
     type: RollingUpdate
     rollingUpdate:
